add recyclerview and add a person asa family member

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -180,8 +180,11 @@
             />
 
         <Button
+            android:layout_gravity="center_horizontal"
+            android:paddingVertical="13dp"
+            android:paddingHorizontal="50dp"
             android:id="@+id/btnUpdateName"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Confirm" />
     </LinearLayout>
