--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -117,6 +117,8 @@
         app:layout_constraintVertical_bias="0.422" />
 
     <Button
+        android:paddingVertical="13dp"
+        android:paddingHorizontal="50dp"
         android:id="@+id/btnChangePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
