--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -30,21 +30,23 @@ android:layout_height="match_parent"
             app:srcCompat="@drawable/ic_baseline_arrow_right_alt_24" />
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
 
             android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3">
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/etFirstName"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:hint="First Name"
                 app:boxStrokeColor="@color/myYellow"
                 app:hintTextColor="@color/myYellow"
@@ -68,6 +70,8 @@ android:layout_height="match_parent"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:hint="Last Name"
                 app:boxStrokeColor="@color/myYellow"
                 app:hintTextColor="@color/myYellow"
@@ -92,6 +96,8 @@ android:layout_height="match_parent"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:hint="Email"
                 app:boxStrokeColor="@color/myYellow"
                 app:hintTextColor="@color/myYellow"
@@ -115,6 +121,8 @@ android:layout_height="match_parent"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:hint="Password"
                 app:boxStrokeColor="@color/myYellow"
                 app:endIconMode="password_toggle"
@@ -136,6 +144,8 @@ android:layout_height="match_parent"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:hint="Confirm password"
                 app:boxStrokeColor="@color/myYellow"
                 app:endIconMode="password_toggle"
@@ -150,38 +160,56 @@ android:layout_height="match_parent"
                     android:inputType="textPassword"
                     android:textColorHighlight="@color/myYellow"
                     android:textColorLink="@color/myYellow" />
+
+
             </com.google.android.material.textfield.TextInputLayout>
 
+            <CheckBox
 
-            <Button
-                android:id="@+id/btnRegister"
+                android:id="@+id/checkBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
+                android:layout_marginBottom="8dp"
+                android:padding="20dp"
+                android:text="By clicking Sign Up, you agree to our terms and that you have read our Data use policy including Cookie use."
+                android:textColor="#6E6969"
+                android:textColorHint="#FFFFFF" />
+
+            <Button
+
+                android:id="@+id/btnRegister"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
+                android:layout_marginBottom="40dp"
+
                 android:backgroundTint="@color/myBlue"
-                android:text="confirm"
+                android:paddingHorizontal="50dp"
+                android:paddingVertical="13dp"
+                android:text="Sign Up"
                 android:textColorHighlight="#009688"
                 android:textColorLink="#009688"
                 android:textStyle="bold" />
+
         </LinearLayout>
 
-
         <TextView
-            android:id="@+id/tvSignin"
+            android:id="@+id/tvSignup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="256dp"
-            android:text="Register now"
-            android:textColor="#000000"
+            android:layout_marginTop="100dp"
+            android:text="Sign Up"
+            android:textColor="@color/myBlue"
             android:textColorHighlight="#FFFFFF"
-            android:textSize="20sp"
+            android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.03" />
+            app:layout_constraintTop_toBottomOf="@+id/tvJoinus" />
 
         <TextView
             android:id="@+id/tvLoggedIn"
@@ -195,16 +223,46 @@ android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.934" />
 
-        <ImageView
+        <TextView
+            android:id="@+id/tvJoinus"
+            android:layout_width="120dp"
+            android:layout_height="97dp"
+            android:text="Join us and secure your home with Lockify!"
+            android:textColor="#000000"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.328" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="48dp"
+            android:background="@color/white"
+            android:foregroundGravity="center"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintStart_toEndOf="@+id/tvJoinus"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.275"
+            app:srcCompat="@drawable/rocket" />
+
+        <!--<com.airbnb.lottie.LottieAnimationView
             android:id="@+id/imageView3"
-            android:layout_width="154dp"
-            android:layout_height="149dp"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
             android:layout_marginTop="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvSignin"
-            app:srcCompat="@drawable/profile" />
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/register" />-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
