add the layout for manage user cahnge the layout of home and lock and unlock fragment

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -12,14 +12,14 @@
         android:id="@+id/ivGoBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:rotation="180"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_baseline_arrow_right_alt_24" />
+        app:layout_constraintVertical_bias="0.004"
+        app:srcCompat="@drawable/ic_left_arrow" />
 
     <TextView
         android:id="@+id/textView"
@@ -30,7 +30,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023" />
@@ -56,9 +56,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Old password"
-        app:boxStrokeColor="@color/myYellow"
+        app:boxStrokeColor="@color/myBlue"
         app:endIconMode="password_toggle"
-        app:hintTextColor="@color/myYellow"
+        app:hintTextColor="@color/myBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,8 +71,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:textColorHighlight="@color/myYellow"
-            android:textColorLink="@color/myYellow" />
+            android:textColorHighlight="@color/myBlue"
+            android:textColorLink="@color/myBlue" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -84,9 +84,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="New password"
-        app:boxStrokeColor="@color/myYellow"
+        app:boxStrokeColor="@color/myBlue"
         app:endIconMode="password_toggle"
-        app:hintTextColor="@color/myYellow"
+        app:hintTextColor="@color/myBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -100,8 +100,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:textColorHighlight="@color/myYellow"
-            android:textColorLink="@color/myYellow" />
+            android:textColorHighlight="@color/myBlue"
+            android:textColorLink="@color/myBlue" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
