--- a/app/src/main/res/drawable/circle_home_2.xml
+++ b/app/src/main/res/drawable/circle_home_2.xml
@@ -4,7 +4,7 @@
     android:shape="oval">
 
     <solid
-        android:color="@color/myLightRed"/>
+        android:color="@color/myLightGreen"/>
 
     <size
         android:width="120dp"
