--- a/app/src/main/res/drawable/ic_baseline_arrow_right_alt_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_arrow_right_alt_24.xml
@@ -1,5 +1,11 @@
-<vector android:autoMirrored="true" android:height="50dp"
-    android:tint="#1075B9" android:viewportHeight="24"
-    android:viewportWidth="24" android:width="50dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M16.01,11H4v2h12.01v3L20,12l-3.99,-4z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="32dp"
+    android:height="32dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+    <path
+        android:pathData="M20,276L443.558,276l-70.164,69.824c-7.829,7.792 -7.859,20.455 -0.067,28.284c7.792,7.83 20.456,7.859 28.285,0.068l104.504,-104c0.007,-0.006 0.012,-0.013 0.018,-0.019c7.809,-7.792 7.834,-20.496 0.002,-28.314c-0.007,-0.006 -0.012,-0.013 -0.018,-0.019l-104.504,-104c-7.828,-7.79 -20.492,-7.763 -28.285,0.068c-7.792,7.829 -7.762,20.492 0.067,28.284L443.558,236L20,236c-11.046,-0 -20,8.954 -20,20C-0,267.046 8.954,276 20,276z"
+        android:fillColor="#1075b9"/>
 </vector>
+
+
