--- a/app/src/main/res/drawable/ic_home.xml
+++ b/app/src/main/res/drawable/ic_home.xml
@@ -1,15 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108"
-    android:tint="#000000">
-  <group android:scaleX="2.5839"
-      android:scaleY="2.5839"
-      android:translateX="22.9932"
-      android:translateY="22.9932">
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z"/>
-  </group>
+    android:width="512dp"
+    android:height="512dp"
+    android:viewportWidth="512.001"
+    android:viewportHeight="512.001">
+  <path
+      android:pathData="M503.402,228.885L273.684,19.567c-10.083,-9.189 -25.288,-9.188 -35.367,-0.001L8.598,228.886c-8.077,7.36 -10.745,18.7 -6.799,28.889c3.947,10.189 13.557,16.772 24.484,16.772h36.69v209.721c0,8.315 6.742,15.057 15.057,15.057h125.914c8.315,0 15.057,-6.741 15.057,-15.057V356.932h74.002v127.337c0,8.315 6.742,15.057 15.057,15.057h125.908c8.315,0 15.057,-6.741 15.057,-15.057V274.547h36.697c10.926,0 20.537,-6.584 24.484,-16.772C514.147,247.585 511.479,236.246 503.402,228.885z"
+      android:fillColor="#8f8989"/>
+  <path
+      android:pathData="M445.092,42.73H343.973l116.176,105.636v-90.58C460.149,49.471 453.408,42.73 445.092,42.73z"
+      android:fillColor="#8f8989"/>
 </vector>
