--- a/app/src/main/res/layout/temp_home.xml
+++ b/app/src/main/res/layout/temp_home.xml
@@ -107,7 +107,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/ivCheckState"
         android:layout_width="180dp"
         android:layout_height="180dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -122,16 +122,16 @@
         android:id="@+id/ivLockedAndUnlocked"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        app:layout_constraintBottom_toBottomOf="@+id/ivCheckState"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView4"
+        app:layout_constraintTop_toTopOf="@+id/ivCheckState"
         app:layout_constraintVertical_bias="0.266"
         app:srcCompat="@drawable/ic_unlocked_home" />
 
     <TextView
-        android:id="@+id/tvState"
+        android:id="@+id/tvStateLol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Locked"
@@ -141,7 +141,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btnCheckState"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView4"
+        app:layout_constraintTop_toTopOf="@+id/ivCheckState"
         app:layout_constraintVertical_bias="0.685" />
 
 
