--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,13 +10,14 @@
         android:icon="@drawable/ic_home"
         />
     <item
+
         android:id="@+id/miLockAndUnlock"
         android:title="Lock and Unlock"
-        android:icon="@drawable/ic_baseline_lock_24"
+        android:icon="@drawable/ic_locked_padlock"
         />
     <item
         android:id="@+id/miProfile"
         android:title="Settings"
-        android:icon="@drawable/ic_profile"
+        android:icon="@drawable/ic_settings"
         />
 </menu>
