add real time database

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -86,11 +86,10 @@
             <!-- Media -->
             <ImageView
                 android:id="@+id/ivProfileImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-
-                />
+                app:srcCompat="@drawable/rocket" />
 
 
         </com.google.android.material.card.MaterialCardView>
